tests/baselines/reference/jsFileCompilationEnumSyntax.errors.txt
tests/cases/compiler/a.js(1,6): error TS8015: 'enum declarations' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    enum E { }
         ~
!!! error TS8015: 'enum declarations' can only be used in a .ts file.